// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`CatalogEntryFilters rendering tests categories filter - test 1`] = `
<div>
  <div
    data-testid="catalog-entry-filters"
  >
    <div
      class="flex items-center justify-between border-b px-4 py-3"
    >
      <span
        class="text-sm font-semibold text-slate-700"
      >
        Filter
      </span>
      <button
        class="text-xs text-slate-400 transition-colors hover:text-slate-600"
        data-testid="reset-filters-btn"
      >
        Zurücksetzen
      </button>
    </div>
    <div
      class="p-3"
      data-testid="categories-filter"
    >
      <p
        class="px-2 pb-1.5 text-xs font-semibold tracking-wide text-slate-400 uppercase"
      >
        Kategorien
      </p>
      <div
        class="space-y-0.5"
      >
        <button
          class="flex w-full items-center rounded-lg px-2 py-1.5 text-left text-sm transition-colors text-slate-600 hover:bg-slate-50"
          data-testid="category-all"
        >
          Alle
          <span
            class="ml-auto text-xs text-slate-400"
          >
            20
          </span>
        </button>
        <button
          class="flex w-full items-center rounded-lg px-2 py-1.5 text-left text-sm transition-colors bg-primary/10 font-medium text-primary"
          data-testid="category-category-1"
        >
          <span
            class="flex-1"
          >
            Category 1
          </span>
          <svg
            aria-hidden="true"
            class="lucide lucide-check h-3.5 w-3.5 shrink-0"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M20 6 9 17l-5-5"
            />
          </svg>
        </button>
        <button
          class="flex w-full items-center rounded-lg px-2 py-1.5 text-left text-sm transition-colors text-slate-600 hover:bg-slate-50"
          data-testid="category-category-2"
        >
          <span
            class="flex-1"
          >
            Category 2
          </span>
        </button>
        <button
          class="flex w-full items-center rounded-lg px-2 py-1.5 text-left text-sm transition-colors text-slate-600 hover:bg-slate-50"
          data-testid="category-category-3"
        >
          <span
            class="flex-1"
          >
            Category 3
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`CatalogEntryFilters rendering tests search filter - test 1`] = `
<div>
  <div
    data-testid="catalog-entry-filters"
  >
    <div
      class="flex items-center justify-between border-b px-4 py-3"
    >
      <span
        class="text-sm font-semibold text-slate-700"
      >
        Filter
      </span>
      <button
        class="text-xs text-slate-400 transition-colors hover:text-slate-600"
        data-testid="reset-filters-btn"
      >
        Zurücksetzen
      </button>
    </div>
    <div
      class="p-3"
      data-testid="categories-filter"
    >
      <p
        class="px-2 pb-1.5 text-xs font-semibold tracking-wide text-slate-400 uppercase"
      >
        Kategorien
      </p>
      <div
        class="space-y-0.5"
      >
        <button
          class="flex w-full items-center rounded-lg px-2 py-1.5 text-left text-sm transition-colors bg-primary/10 font-medium text-primary"
          data-testid="category-all"
        >
          Alle
          <span
            class="ml-auto text-xs text-slate-400"
          >
            20
          </span>
        </button>
        <button
          class="flex w-full items-center rounded-lg px-2 py-1.5 text-left text-sm transition-colors text-slate-600 hover:bg-slate-50"
          data-testid="category-category-1"
        >
          <span
            class="flex-1"
          >
            Category 1
          </span>
        </button>
        <button
          class="flex w-full items-center rounded-lg px-2 py-1.5 text-left text-sm transition-colors text-slate-600 hover:bg-slate-50"
          data-testid="category-category-2"
        >
          <span
            class="flex-1"
          >
            Category 2
          </span>
        </button>
        <button
          class="flex w-full items-center rounded-lg px-2 py-1.5 text-left text-sm transition-colors text-slate-600 hover:bg-slate-50"
          data-testid="category-category-3"
        >
          <span
            class="flex-1"
          >
            Category 3
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`CatalogEntryFilters rendering tests without filters - test 1`] = `
<div>
  <div
    data-testid="catalog-entry-filters"
  >
    <div
      class="flex items-center justify-between border-b px-4 py-3"
    >
      <span
        class="text-sm font-semibold text-slate-700"
      >
        Filter
      </span>
    </div>
    <div
      class="p-3"
      data-testid="categories-filter"
    >
      <p
        class="px-2 pb-1.5 text-xs font-semibold tracking-wide text-slate-400 uppercase"
      >
        Kategorien
      </p>
      <div
        class="space-y-0.5"
      >
        <button
          class="flex w-full items-center rounded-lg px-2 py-1.5 text-left text-sm transition-colors bg-primary/10 font-medium text-primary"
          data-testid="category-all"
        >
          Alle
          <span
            class="ml-auto text-xs text-slate-400"
          >
            21
          </span>
        </button>
        <button
          class="flex w-full items-center rounded-lg px-2 py-1.5 text-left text-sm transition-colors text-slate-600 hover:bg-slate-50"
          data-testid="category-category-1"
        >
          <span
            class="flex-1"
          >
            Category 1
          </span>
        </button>
        <button
          class="flex w-full items-center rounded-lg px-2 py-1.5 text-left text-sm transition-colors text-slate-600 hover:bg-slate-50"
          data-testid="category-category-2"
        >
          <span
            class="flex-1"
          >
            Category 2
          </span>
        </button>
        <button
          class="flex w-full items-center rounded-lg px-2 py-1.5 text-left text-sm transition-colors text-slate-600 hover:bg-slate-50"
          data-testid="category-category-3"
        >
          <span
            class="flex-1"
          >
            Category 3
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;
